--- a/_posts/2016-1-1-sjcl.html
+++ b/_posts/2016-1-1-sjcl.html
@@ -2,7 +2,7 @@
 layout: post
 title: An Encrypt and Dectrypt tool with sjcl.js
 author: DeerRIDER
-category: Sample
+category: NeGYa
 date: 2019-4-16
 ---
 
