--- a/_posts/NeGYa/2016-1-1-sjcl.html
+++ b/_posts/NeGYa/2016-1-1-sjcl.html
@@ -8,7 +8,7 @@ date: 2019-4-16
 
 <!-- aes encrypt and decrypt method -->
 <script
-  src="{{ site.url }}{{ site.baseurl }}{{ site.assets_path }}/js/sjcl.js"
+  src="{{ site.assets_path }}/js/sjcl.js"
   async
 ></script>
 
