--- a/_posts/Server/2020-03-08-sjcl.html
+++ b/_posts/Server/2020-03-08-sjcl.html
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: An Encrypt and Dectrypt tool with sjcl.js
+title: 06:加密解密工具
 author: DeerRIDER
-category: NeGYa
-date: 2019-4-16
+category: Server
+date: 2020-03-08
 ---
 
 <!-- aes encrypt and decrypt method -->
